Tidies a bit. Fixes a problem where an Overlay scroller renders incorrectly on first render. Fixes numerous CSS problems and redundant styles for scrollers. Adds sc-overlay-scroller-view class to SC.OverlayScrollerView and uses new class in theme. Allows the overlay scroller to scroll further down/right, since there are no scroll buttons visible. Removes duplicated code in SC.OverlayScrollerView.

--- a/frameworks/desktop/resources/overlay-scroller.css
+++ b/frameworks/desktop/resources/overlay-scroller.css
@@ -1,7 +1,7 @@
 @import "compass/css3";
 
 
-.sc-touch-scroller-view {
+.sc-overlay-scroller-view {
 
   /* Track */
   .track {
